sumo/tests/dfrouter/errors/network/edge/root__edge#id__ungiven1/errors.dfrouter
Error: An edge without an id occured within 'net.net.xml'.
Quitting (on error).
